2013-06-21 Pedro Vicente  <pvicente@uci.edu>

	* Add ncpdq test #19 Reverse/Re-order 3D variable -a -lat,-time -v three_dmn_var_dbl
	* Add ncpdq test #20 Re-order several variables -a lat,time -v ty,three_dmn_rec_var (no MSA) Test 1
	* Add ncpdq test #21 Re-order several variables -a lat,time -v ty,three_dmn_rec_var (no MSA) Test 2  
  
2013-06-19 Pedro Vicente  <pvicente@uci.edu>

	* Add ncpdq test #6 Re-order 3D variable with MSA -C -a lat,lon,time -v three_dmn_var_dbl
	* Add ncpdq test #7 Re-order 3D variable with MSA (stride) -a lat,lon,time -v three_dmn_var_dbl

2013-06-19  Charlie Zender  <zender@uci.edu>

	* Fix /proc/self/stat read types and add human-readable sizes for failed memory requests

2013-06-18 Pedro Vicente  <pvicente@uci.edu>

	* Add ncpdq test #13  Re-order 2D variable with record (-C , no MSA) -v two_dmn_rec_var -C -a lev,time
	* Add ncpdq test #14  Re-order 2D variable with record (no -C , no MSA) -v two_dmn_rec_var -a lev,time
	* Add ncpdq test #15  Re-order 2D variable with record (-C , MSA) -v two_dmn_rec_var -a lev,time
	* Add ncpdq test #16  Re-order 2D variable with record (no -C , MSA) -v two_dmn_rec_var -a lev,time

2013-06-17 Pedro Vicente  <pvicente@uci.edu>

	* Add ncpdq test #10  Re-order 2D variable (no -C , no MSA) -v two_dmn_var -a lev,lat
	* Add ncpdq test #11  Re-order 2D variable (-C , MSA) -v two_dmn_var -a lev,lat -d lat,1,1 -d lev,1,1
	* Add ncpdq test #12  Re-order 2D variable (no -C , MSA) -v two_dmn_var -a lev,lat -d lat,1,1 -d lev,1

	* nco_var_prc_msa_trv() Transfer MSA sizes from GTT to processed variables

	* nco_dmn_rdr_trv() Transfer dimension structures to be re-ordered (ncpdq) into GTT

	* nco_dmn_rdr_xtr() Form list of re-ordering dimensions from extracted input dimensions (ncpdq)

	* nco_dmn_lst_ass_var_trv() Create list of all dimensions associated with input variable list (ncpdq only)

	* nco_dmn_lst_ass_var_nbr_trv() Find number of dimensions associated with variables to be extracted (ncpdq only)
